--- a/src/ImageGallery.css
+++ b/src/ImageGallery.css
@@ -1,9 +1,9 @@
 .photo-box {
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  border: 1px solid slategray;
+  /* margin-bottom: 1rem;
+  margin-top: 1rem; */
+  /* border: 1px solid slategray; */
   color: white;
-  min-height: 200px;
+  /* min-height: 200px; */
   height: 100%;
   width: 100%
 }
@@ -11,4 +11,24 @@
 .rowOverflow {
   overflow-y: scroll;
   height: 100%;
+}
+
+.container{
+  position: relative;
+  text-align: center;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 40px;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+
 }
